# arrowcode

./: .env.example  .gitignore  .npmignore  ARROW.md  Cargo.toml  FEATURES.md  GUIDE.md  README.md  contributing.md  install.ps1  install.sh  package.json  tsconfig.json  update.sh
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  release.yml
assets/: banner.txt
defaults/: ARROW.md
defaults/agents/: backend.md  frontend.md  orchestrator.md  tester.md
defaults/agents/config/: config.example.yaml
defaults/agents/templates/: migrate.md  refactor.md  spike.md  tests.md  ui.md
defaults/config/: agents.yaml
defaults/templates/: api.md  bugfix.md  feature.md  fullstack.md  perf.md  review.md  security.md
docs/: ARCHITECTURE.md  GUIDE.md  HOW_TO_USE.md  INSTALL.md  PERFORMANCE.md  SECURITY.md  SESSIONS.md  TOOLS.md
scripts/: smoke.ts
src/: index.ts  main.rs
src/agents/: mod.rs  personalities.ts  prompts.ts  worker.ts
src/bootstrap/: install-home.ts  paths.ts
src/brand/: banner.ts
src/commands/: registry.ts
src/config/: load.ts  paths.ts  types.ts
src/core/: bus.ts  checkpoints.ts  events.ts  file-tracker.ts  goal.ts  harness.ts  metrics.ts  mod.rs  policy.ts  session-log.ts
src/llm/: client.ts
src/memory/: context.ts
src/perf/: cache.ts  debounce.ts  fast-context.ts  index.ts  parallel.ts  timers.ts
src/session/: context-layers.ts  manager.ts
src/setup/: wizard.ts
src/swarm/: engine.ts
src/templates/: catalog.ts
src/tools/: builtin.ts  extra.ts  mod.rs  types.ts  workspace.ts
src/tui/: App.tsx  mod.rs  theme.ts
(+15 files in other folders)
